Add `TOMCAT_ALLOW_REMOTE_MANAGEMENT` to container environment

--- a/incubator/tomcat/templates/deployment.yaml
+++ b/incubator/tomcat/templates/deployment.yaml
@@ -25,6 +25,8 @@ spec:
             secretKeyRef:
               name: {{ template "fullname" . }}
               key: tomcat-password
+        - name: TOMCAT_ALLOW_REMOTE_MANAGEMENT
+          value: {{ default "" .Values.allowRemoteManagement | quote }}
         ports:
         - name: http
           containerPort: 8080
