--- a/incubator/tomcat/templates/deployment.yaml
+++ b/incubator/tomcat/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
               name: {{ template "fullname" . }}
               key: tomcat-password
         - name: TOMCAT_ALLOW_REMOTE_MANAGEMENT
-          value: {{ default "" .Values.allowRemoteManagement | quote }}
+          value: {{ default "" .Values.tomcatAllowRemoteManagement | quote }}
         ports:
         - name: http
           containerPort: 8080
