--- a/incubator/tomcat/values.yaml
+++ b/incubator/tomcat/values.yaml
@@ -21,7 +21,7 @@ tomcatUsername: user
 ## Expose management services
 ## ref: https://github.com/bitnami/charts/tree/master/incubator/tomcat#configuration
 ##
-allowRemoteManagement: 0
+tomcatAllowRemoteManagement: 0
 
 ## Kubernetes configuration
 ## For minikube, set this to NodePort, elsewhere use LoadBalancer
