--- a/incubator/elasticsearch/values.yaml
+++ b/incubator/elasticsearch/values.yaml
@@ -27,8 +27,14 @@ cluster:
   ## ref: https://github.com/bitnami/bitnami-docker-elasticsearch#environment-variables
   ##
   name: elasticsearch-cluster
+  ## The serviceAccountName to be used, required by the elasticsearch-cloud-kubernetes plugin
   serviceAccountName: default
+  ## Comma seperated list of plugins
+  ## ref: https://github.com/bitnami/bitnami-docker-elasticsearch#environment-variables
+  ##
   plugins: io.fabric8:elasticsearch-cloud-kubernetes:5.5.2
+  ## Customize elasticsearch configuration
+  ## ref: https://www.elastic.co/guide/en/elasticsearch/reference/current/settings.html
   config:
 
 node:
