elasticsearch: set `minimum_master_nodes` to 2
fixes master node election at start up

--- a/incubator/elasticsearch/templates/cm.yaml
+++ b/incubator/elasticsearch/templates/cm.yaml
@@ -22,6 +22,7 @@ data:
     discovery:
       zen:
         hosts_provider: kubernetes
+        minimum_master_nodes: 2
 
     plugin:
       mandatory: discovery-kubernetes
