--- a/incubator/elasticsearch/templates/master-deploy.yaml
+++ b/incubator/elasticsearch/templates/master-deploy.yaml
@@ -31,7 +31,7 @@ spec:
         imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         env:
         - name: SERVICE
-          value: "{{ template "fullname" . }}"
+          value: "{{ template "fullname" . }}-transport"
         - name: KUBERNETES_NAMESPACE
           value: "{{ .Release.Namespace }}"
         - name: NODE_MASTER
