--- a/incubator/elasticsearch/templates/svc.yaml
+++ b/incubator/elasticsearch/templates/svc.yaml
@@ -1,7 +1,26 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ template "fullname" . }}"
+  name: "{{ template "fullname" . }}-transport"
+  labels:
+    app: "{{ template "name" . }}"
+    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
+    release: "{{ .Release.Name }}"
+    heritage: "{{ .Release.Service }}"
+spec:
+  ports:
+  - name: "transport"
+    port: {{ .Values.service.port.transport }}
+    targetPort: "transport"
+  selector:
+    app: "{{ template "name" . }}"
+    release: "{{ .Release.Name }}"
+    component: "master"
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: "{{ template "fullname" . }}-http"
   labels:
     app: "{{ template "name" . }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
@@ -13,9 +32,6 @@ spec:
   - name: "http"
     port: {{ .Values.service.port.http }}
     targetPort: "http"
-  - name: "transport"
-    port: {{ .Values.service.port.transport }}
-    targetPort: "transport"
   selector:
     app: "{{ template "name" . }}"
     release: "{{ .Release.Name }}"
