elasticsearch: specify default values for `node.master` and `node.data` in configMap

--- a/incubator/elasticsearch/templates/cm.yaml
+++ b/incubator/elasticsearch/templates/cm.yaml
@@ -11,8 +11,8 @@ data:
   elasticsearch_custom.yml: |-
 
     node:
-      master: ${NODE_MASTER}
-      data: ${NODE_DATA}
+      master: ${NODE_MASTER:true}
+      data: ${NODE_DATA:true}
 
     cloud:
       kubernetes:
