elasticsearch: moved `plugins` and `config` params under `node` key

--- a/incubator/elasticsearch/templates/cm.yaml
+++ b/incubator/elasticsearch/templates/cm.yaml
@@ -28,5 +28,5 @@ data:
       mandatory: discovery-kubernetes
 
 {{- if .Values.cluster.config }}
-{{ toYaml .Values.cluster.config | indent 4 }}
+{{ toYaml .Values.node.config | indent 4 }}
 {{- end }}
