--- a/incubator/elasticsearch/templates/data-statefulset.yaml
+++ b/incubator/elasticsearch/templates/data-statefulset.yaml
@@ -46,7 +46,7 @@ spec:
         - name: ELASTICSEARCH_NODE_PORT_NUMBER
           value: "{{ .Values.service.port.transport }}"
         - name: ELASTICSEARCH_PLUGINS
-          value: "{{ .Values.cluster.plugins }}"
+          value: "{{ .Values.node.plugins }}"
         - name: ES_JAVA_OPTS
           value: "-Djava.net.preferIPv4Stack=true -Xms{{ .Values.node.data.heapSize }} -Xmx{{ .Values.node.data.heapSize }}"
         ports:
