--- a/incubator/elasticsearch/templates/svc.yaml
+++ b/incubator/elasticsearch/templates/svc.yaml
@@ -10,7 +10,7 @@ metadata:
 spec:
   ports:
   - name: "transport"
-    port: {{ .Values.service.port.transport }}
+    port: 9300
     targetPort: "transport"
   selector:
     app: "{{ template "name" . }}"
