--- a/incubator/elasticsearch/templates/master-deploy.yaml
+++ b/incubator/elasticsearch/templates/master-deploy.yaml
@@ -17,7 +17,7 @@ spec:
         component: "master"
         release: "{{ .Release.Name }}"
     spec:
-      serviceAccountName: "{{ .Values.cluster.serviceAccountName }}"
+      serviceAccountName: "{{ .Values.node.serviceAccountName }}"
       initContainers:
       - name: sysctl
         image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
