elasticsearch: configure `node.name` to value of `HOSTNAME`

--- a/incubator/elasticsearch/templates/cm.yaml
+++ b/incubator/elasticsearch/templates/cm.yaml
@@ -11,6 +11,7 @@ data:
   elasticsearch_custom.yml: |-
 
     node:
+      name: ${HOSTNAME}
       master: ${NODE_MASTER:true}
       data: ${NODE_DATA:true}
 
