--- a/incubator/elasticsearch/templates/master-deploy.yaml
+++ b/incubator/elasticsearch/templates/master-deploy.yaml
@@ -26,7 +26,7 @@ spec:
         securityContext:
           privileged: true
       containers:
-      - name: "{{ template "fullname" . }}"
+      - name: "elasticsearch"
         image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
         imagePullPolicy: "{{ .Values.image.pullPolicy }}"
         env:
