--- a/incubator/elasticsearch/templates/client-deploy.yaml
+++ b/incubator/elasticsearch/templates/client-deploy.yaml
@@ -1,20 +1,20 @@
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: "{{ template "master.fullname" . }}"
+  name: "{{ template "client.fullname" . }}"
   labels:
     app: "{{ template "name" . }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    component: "master"
+    component: "client"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  replicas: {{ .Values.node.master.replicas }}
+  replicas: {{ .Values.node.client.replicas }}
   template:
     metadata:
       labels:
         app: "{{ template "name" . }}"
-        component: "master"
+        component: "client"
         release: "{{ .Release.Name }}"
     spec:
       serviceAccountName: "{{ .Values.node.serviceAccountName }}"
@@ -35,7 +35,7 @@ spec:
         - name: KUBERNETES_NAMESPACE
           value: "{{ .Release.Namespace }}"
         - name: NODE_MASTER
-          value: "true"
+          value: "false"
         - name: NODE_DATA
           value: "false"
         - name: ELASTICSEARCH_CLUSTER_NAME
@@ -43,22 +43,24 @@ spec:
         - name: ELASTICSEARCH_PLUGINS
           value: "{{ .Values.node.plugins }}"
         - name: ES_JAVA_OPTS
-          value: "-Xms{{ .Values.node.master.heapSize }} -Xmx{{ .Values.node.master.heapSize }}"
+          value: "-Xms{{ .Values.node.client.heapSize }} -Xmx{{ .Values.node.client.heapSize }}"
         ports:
+        - name: "http"
+          containerPort: 9200
         - name: transport
           containerPort: 9300
         livenessProbe:
           httpGet:
             path: /_cluster/health?local=true
-            port: 9200
+            port: "http"
           initialDelaySeconds: 90
         readinessProbe:
           httpGet:
             path: /_cluster/health?local=true
-            port: 9200
+            port: "http"
           initialDelaySeconds: 5
         resources:
-{{ toYaml .Values.node.master.resources | indent 10 }}
+{{ toYaml .Values.node.client.resources | indent 10 }}
         volumeMounts:
         - mountPath: /bitnami/elasticsearch/conf/elasticsearch_custom.yml
           name: "config"
