--- a/incubator/elasticsearch/templates/client-svc.yaml
+++ b/incubator/elasticsearch/templates/client-svc.yaml
@@ -8,7 +8,7 @@ metadata:
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
 spec:
-  type: "{{ .Values.service.type }}"
+  type: "{{ .Values.node.client.service.type }}"
   ports:
   - name: "http"
     port: {{ .Values.cluster.port.http }}
