--- a/incubator/elasticsearch/templates/data-statefulset.yaml
+++ b/incubator/elasticsearch/templates/data-statefulset.yaml
@@ -10,7 +10,7 @@ metadata:
     heritage: "{{ .Release.Service }}"
 spec:
   serviceName: "{{ template "data.fullname" . }}"
-  replicas: {{ .Values.node.data.replicas }}
+  replicas: {{ .Values.data.replicas }}
   template:
     metadata:
       labels:
@@ -18,7 +18,7 @@ spec:
         component: "data"
         release: "{{ .Release.Name }}"
     spec:
-      serviceAccountName: "{{ .Values.node.serviceAccountName }}"
+      serviceAccountName: "{{ .Values.serviceAccountName }}"
       initContainers:
       - name: sysctl
         image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
@@ -40,11 +40,11 @@ spec:
         - name: NODE_DATA
           value: "true"
         - name: ELASTICSEARCH_CLUSTER_NAME
-          value: "{{ .Values.cluster.name }}"
+          value: "{{ .Values.name }}"
         - name: ELASTICSEARCH_PLUGINS
-          value: "{{ .Values.node.plugins }}"
+          value: "{{ .Values.plugins }}"
         - name: ES_JAVA_OPTS
-          value: "-Xms{{ .Values.node.data.heapSize }} -Xmx{{ .Values.node.data.heapSize }}"
+          value: "-Xms{{ .Values.data.heapSize }} -Xmx{{ .Values.data.heapSize }}"
         ports:
         - name: transport
           containerPort: 9300
@@ -59,7 +59,7 @@ spec:
             port: 9200
           initialDelaySeconds: 5
         resources:
-{{ toYaml .Values.node.data.resources | indent 10 }}
+{{ toYaml .Values.data.resources | indent 10 }}
         volumeMounts:
         - mountPath: /bitnami/elasticsearch/conf/elasticsearch_custom.yml
           name: "config"
@@ -70,27 +70,27 @@ spec:
       - name: "config"
         configMap:
           name: "{{ template "fullname" . }}"
-{{- if .Values.node.data.persistence.enabled }}
+{{- if .Values.data.persistence.enabled }}
   volumeClaimTemplates:
   - metadata:
       name: "data"
-{{- if .Values.node.data.persistence.annotations }}
+{{- if .Values.data.persistence.annotations }}
       annotations:
-{{ toYaml .Values.node.data.persistence.annotations | indent 6 }}
+{{ toYaml .Values.data.persistence.annotations | indent 6 }}
 {{- end }}
     spec:
       accessModes:
-{{ toYaml .Values.node.data.persistence.accessModes | indent 6 }}
-{{- if .Values.node.data.persistence.storageClass }}
-{{- if (eq "-" .Values.node.data.persistence.storageClass) }}
+{{ toYaml .Values.data.persistence.accessModes | indent 6 }}
+{{- if .Values.data.persistence.storageClass }}
+{{- if (eq "-" .Values.data.persistence.storageClass) }}
       storageClassName: ""
 {{- else }}
-      storageClassName: "{{ .Values.node.data.persistence.storageClass }}"
+      storageClassName: "{{ .Values.data.persistence.storageClass }}"
 {{- end }}
 {{- end }}
       resources:
         requests:
-          storage: "{{ .Values.node.data.persistence.size }}"
+          storage: "{{ .Values.data.persistence.size }}"
 {{- else }}
       - name: "data"
         emptyDir: {}
