--- a/incubator/mariadb-cluster/templates/master-pvc.yaml
+++ b/incubator/mariadb-cluster/templates/master-pvc.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 metadata:
   name: {{ template "master.fullname" . }}
   labels:
-    app: {{ template "master.fullname" . }}
+    app: "{{ template "name" . }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
