--- a/incubator/mariadb-cluster/templates/master-svc.yaml
+++ b/incubator/mariadb-cluster/templates/master-svc.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ template "master.fullname" . }}
   labels:
-    app: {{ template "master.fullname" . }}
+    app: "{{ template "name" . }}"
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
@@ -13,4 +13,6 @@ spec:
     port: 3306
     targetPort: mysql
   selector:
-    app: {{ template "master.fullname" . }}
+    app: "{{ template "name" . }}"
+    component: "master"
+    release: "{{ .Release.Name }}"
