--- a/incubator/mariadb-cluster/templates/master-pvc.yaml
+++ b/incubator/mariadb-cluster/templates/master-pvc.yaml
@@ -8,19 +8,21 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
+{{- if .Values.persistence.annotations }}
   annotations:
-  {{- if .Values.persistence.storageClass }}
-    volume.beta.kubernetes.io/storage-class: {{ .Values.persistence.storageClass | quote }}
-  {{- else }}
-    volume.alpha.kubernetes.io/storage-class: default
-  {{- end }}
-  {{- range $key, $value := .Values.persistence.annotations }}
-    {{ $key }}: {{ $value }}
-  {{- end }}
+{{ toYaml .Values.persistence.annotations | indent 2 }}
+{{- end }}
 spec:
   accessModes:
-    - {{ .Values.persistence.accessMode | quote }}
+{{ toYaml .Values.persistence.accessModes | indent 2 }}
   resources:
     requests:
-      storage: {{ .Values.persistence.size | quote }}
+      storage: "{{ .Values.persistence.size }}"
+{{- if .Values.persistence.storageClass }}
+{{- if (eq "-" .Values.persistence.storageClass) }}
+  storageClassName: ""
+{{- else }}
+  storageClassName: "{{ .Values.persistence.storageClass }}"
+{{- end }}
+{{- end }}
 {{- end }}
