--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -9,20 +9,20 @@ metadata:
     heritage: "{{ .Release.Service }}"
 type: Opaque
 data:
-  {{ if .Values.mariadbRootPassword }}
+  {{- if .Values.mariadbRootPassword }}
   mariadb-root-password: {{ .Values.mariadbRootPassword | b64enc | quote }}
-  {{ else }}
+  {{- else }}
   mariadb-root-password: {{ randAlphaNum 10 | b64enc | quote }}
-  {{ end }}
-  {{ if .Values.mariadbUser }}
-  {{ if .Values.mariadbPassword }}
+  {{- end }}
+  {{- if .Values.mariadbUser }}
+  {{- if .Values.mariadbPassword }}
   mariadb-password: {{ .Values.mariadbPassword | b64enc | quote }}
-  {{ else }}
+  {{- else }}
   mariadb-password: {{ randAlphaNum 10 | b64enc | quote }}
-  {{ end }}
-  {{ end }}
-  {{ if .Values.mariadbReplicationPassword }}
+  {{- end }}
+  {{- end }}
+  {{- if .Values.mariadbReplicationPassword }}
   mariadb-replication-password: {{ .Values.mariadbReplicationPassword | b64enc | quote }}
-  {{ else }}
+  {{- else }}
   mariadb-replication-password: {{ randAlphaNum 10 | b64enc | quote }}
-  {{ end }}
+  {{- end }}
