mariadb-cluster: removed `quote` function call from secrets.yaml

--- a/incubator/mariadb-cluster/templates/secrets.yaml
+++ b/incubator/mariadb-cluster/templates/secrets.yaml
@@ -10,19 +10,19 @@ metadata:
 type: Opaque
 data:
   {{- if .Values.mariadbRootPassword }}
-  mariadb-root-password: {{ .Values.mariadbRootPassword | b64enc | quote }}
+  mariadb-root-password: "{{ .Values.mariadbRootPassword | b64enc }}"
   {{- else }}
-  mariadb-root-password: {{ randAlphaNum 10 | b64enc | quote }}
+  mariadb-root-password: "{{ randAlphaNum 10 | b64enc }}"
   {{- end }}
   {{- if .Values.mariadbUser }}
   {{- if .Values.mariadbPassword }}
-  mariadb-password: {{ .Values.mariadbPassword | b64enc | quote }}
+  mariadb-password: "{{ .Values.mariadbPassword | b64enc }}"
   {{- else }}
-  mariadb-password: {{ randAlphaNum 10 | b64enc | quote }}
+  mariadb-password: "{{ randAlphaNum 10 | b64enc }}"
   {{- end }}
   {{- end }}
   {{- if .Values.mariadbReplicationPassword }}
-  mariadb-replication-password: {{ .Values.mariadbReplicationPassword | b64enc | quote }}
+  mariadb-replication-password: "{{ .Values.mariadbReplicationPassword | b64enc }}"
   {{- else }}
-  mariadb-replication-password: {{ randAlphaNum 10 | b64enc | quote }}
+  mariadb-replication-password: "{{ randAlphaNum 10 | b64enc }}"
   {{- end }}
