mariadb-cluster: upgrade to `bitnami/mariadb:10.1.28-r2`

--- a/incubator/mariadb-cluster/templates/slave-deployment.yaml
+++ b/incubator/mariadb-cluster/templates/slave-deployment.yaml
@@ -17,6 +17,9 @@ spec:
         component: "slave"
         release: "{{ .Release.Name }}"
     spec:
+      securityContext:
+        runAsUser: 1001
+        fsGroup: 1001
       {{- if eq .Values.antiAffinity "hard" }}
       affinity:
         podAntiAffinity:
