--- a/incubator/mariadb-cluster/Chart.yaml
+++ b/incubator/mariadb-cluster/Chart.yaml
@@ -1,5 +1,6 @@
 name: mariadb-cluster
 version: 0.4.1
+appVersion: 10.1.28
 description: Chart to create a Highly available MariaDB cluster
 keywords:
 - mariadb
