--- a/incubator/mariadb-cluster/templates/master-deployment.yaml
+++ b/incubator/mariadb-cluster/templates/master-deployment.yaml
@@ -17,6 +17,9 @@ spec:
         component: "master"
         release: "{{ .Release.Name }}"
     spec:
+      securityContext:
+        runAsUser: 1001
+        fsGroup: 1001
       {{- if eq .Values.antiAffinity "hard" }}
       affinity:
         podAntiAffinity:
